2008-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/Makefile.am:
	  Set TRIAL_ENV.
	* Makefile.am:
	* env (deleted):
	* env.in: (added)
	  Generate env.
	* configure.ac:
	  bump to 0.5

2008-10-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	Add missing properties: has-video, video-decoder and audio-decoder.

2008-08-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/dvb/dvbchecks.py:
	Remove - and _ from city names. Remove trailing whitespace
	and make comform to pep8.py

2008-08-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/dvb/dvb-probe-channels.glade:
	* flumotion/component/dvb/wizard_gtk.py:
	Some minor style fixes.
	Pulse the progress bar a bit more often with less progress,
	reset it and set the label if we cannot find any channels.

2008-07-25  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/wizard_gtk.py:
	Pulse progress bar when scanning at 5 second intervals.

2008-07-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvbchecks.py:
	* flumotion/component/dvb/wizard_gtk.py:
	Make country and antenna for dvb-t more friendly looking.

2008-07-24  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/dvb/wizard_gtk.py:
	Clean up the wizard a bit further, to make the code closer
	to the other pages.

2008-07-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* configure.ac:
	Depend on newer flumotion due to wizard stuff.
	* flumotion/component/dvb/Makefile.am:
	* flumotion/component/dvb/admin_gtk.py:
	Fix for move of class.
	* flumotion/component/dvb/dvb.py:
	Fix for move of function.
	* flumotion/component/dvb/dvb.xml:
	* flumotion/component/dvb/dvbchecks.py:
	* flumotion/component/dvb/wizard_gtk.py:
	* flumotion/component/dvb/dvbchecks.py (added):
	* flumotion/component/dvb/dvb-probe-channels.glade (added):
	* flumotion/component/dvb/dvb-antenna.glade (added):